[gd_scene load_steps=2 format=3 uid="uid://bq2gl0u2g5fgn"]

[ext_resource type="Script" path="res://Scripts/hurtboxcomponent.gd" id="1_micoo"]

[node name="HurtboxComponent" type="Area3D"]
script = ExtResource("1_micoo")

[node name="DamageTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
